@@ -1,0 +1,1 @@
+Kwiki plugin to protect pages from viewing and editing.
