@@ -1,0 +1,18 @@
+# $NetBSD: Makefile,v 1.1.1.1 2005/02/12 00:12:01 jlam Exp $
+
+DISTNAME=      	Kwiki-PagePrivacy-0.10
+PKGNAME=       	p5-${DISTNAME}
+CATEGORIES=	www perl5
+MASTER_SITES=	${MASTER_SITE_PERL_CPAN:=Kwiki/}
+
+MAINTAINER=	jlam@NetBSD.org
+HOMEPAGE=	http://www.kwiki.org/
+COMMENT=	Kwiki page-level privacy plugin
+
+DEPENDS+=	p5-Kwiki>=0.37nb1:../../www/p5-Kwiki
+
+USE_BUILDLINK3=		yes
+PERL5_PACKLIST=		${PERL5_SITEARCH}/auto/Kwiki/PagePrivacy/.packlist
+
+.include "../../lang/perl5/module.mk"
+.include "../../mk/bsd.pkg.mk"
