@@ -1,0 +1,1 @@
+@comment $NetBSD: PLIST,v 1.1.1.1 2005/02/12 00:12:01 jlam Exp $
