@@ -1,0 +1,4 @@
+$NetBSD: distinfo,v 1.1.1.1 2005/02/12 00:12:01 jlam Exp $
+
+SHA1 (Kwiki-PagePrivacy-0.10.tar.gz) = 9f0d77c2d13f572d1a2d1504257590f95892f952
+Size (Kwiki-PagePrivacy-0.10.tar.gz) = 8437 bytes
