@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.9115 2005/02/12 00:04:50 jlam Exp $
+$NetBSD: CHANGES,v 1.9116 2005/02/12 00:12:00 jlam Exp $
 
 Changes to the packages collection and infrastructure in 2005:
 
@@ -850,3 +850,4 @@ Changes to the packages collection and infrastructure in 2005:
 	Added pgpool-2.5 [minskim 2005-02-11]
 	Updated audit-packages to 1.33 [agc 2005-02-11]
 	Updated p5-Kwiki-Scode to 0.03 [jlam 2005-02-11]
+	Added p5-Kwiki-PagePrivacy-0.10 [jlam 2005-02-11]
